# ODE_Solver_Example

./: CMakeLists.txt  README.md  build.sh  configure.sh
materials/: operations.ods
source/: CMakeLists.txt  adams_bashfort_2.cpp  common_methods.h  main.cpp  main.h  plugin_interfaces.h  runge_kutta_4.cpp
source/IntervalMath/: CMakeLists.txt  interval_math.cpp  interval_math.h
source/IntervalMath/tests/: IntervalMath_ExtendedSet_tests.cpp  IntervalMath_Interval_test.cpp
source/plugins/: CMakeLists.txt
source/plugins/solvers/: CMakeLists.txt
source/plugins/solvers/adams_bashfort_2/: CMakeLists.txt  adams_bashfort_2.cpp
source/plugins/solvers/adams_bashfort_moulton_4/: CMakeLists.txt  adams_bashfort_moulton_4.cpp
source/plugins/solvers/runge_kutta_4/: CMakeLists.txt  runge_kutta_4.cpp
source/plugins/visualizers/: CMakeLists.txt
source/plugins/visualizers/csv_visualizer/: CMakeLists.txt  csv_visualizer.cpp
source/plugins/visualizers/human_read_visualizer/: CMakeLists.txt  human_read_visualizer.cpp
